--- a/EFC2.0/Pages/Shared/Sidebar.cshtml
+++ b/EFC2.0/Pages/Shared/Sidebar.cshtml
@@ -206,7 +206,7 @@
                         </ul>
                     </div>
                 </li>
-                <li routerlinkactive="menu-1-active" class="nav-item org-main ng-star-inserted">
+                <li data-target="summary" class="nav-item org-main ng-star-inserted">
                     <a>
                         <svg width="25" height="25" viewBox="0 0 25 25" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <path d="M2 20.293H23" stroke="#325080" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
@@ -223,8 +223,8 @@
                                 <a><span class="sidebar-dropdown-label">Dashboard</span><span class="side-arr">›</span></a>
                                 <div class="sidebar-sub-dropdown">
                                     <ul class="sidebar-dropdown-list">
-                                        <li routerlinkactive="menu-3-active" class="ng-star-inserted"><a routerlink="/organization/org-dashboard/org-summary" href="#/organization/org-dashboard/org-summary"><span class="sidebar-dropdown-label">Summary</span></a></li>
-                                        <li routerlinkactive="menu-3-active" class="ng-star-inserted"><a routerlink="/organization/org-dashboard/org-reports" href="#/organization/org-dashboard/org-reports"><span class="sidebar-dropdown-label">Reports</span></a></li>
+                                    <li class="ng-star-inserted"><a href="/organization/org_dashboard"><span class="sidebar-dropdown-label">Summary</span></a></li>
+                                    <li class="ng-star-inserted"><a href="/organization/org_dashboard"><span class="sidebar-dropdown-label">Reports</span></a></li>
                                     </ul>
                                 </div>
                             </li>
