--- a/EFC2.0/wwwroot/css/style.css
+++ b/EFC2.0/wwwroot/css/style.css
@@ -4601,17 +4601,17 @@ progress {
 .form-control {
     display: block;
     width: 100%;
-    padding: .375rem .75rem;
-    font-size: 1rem;
+    padding: 8px;
+    font-size: 13px;
     font-weight: 400;
     line-height: 1.5;
-    color: #212529;
+    color: #202020;
     background-color: #fff;
     background-clip: padding-box;
     border: 1px solid #ced4da;
     appearance: none;
     border-radius: .375rem;
-    transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out
+    transition: border-color .15s ease-in-out, box-shadow .15s ease-in-out;
 }
 
 @media (prefers-reduced-motion:reduce) {
@@ -30609,8 +30609,11 @@ body {
         }
 
     .mat-flat-button.mat-primary, .mat-raised-button.mat-primary, .mat-fab.mat-primary, .mat-mini-fab.mat-primary {
-        background-color: #273143
+        background-color: #ff823e
     }
+        .mat-flat-button.mat-primary:hover, .mat-raised-button.mat-primary:hover, .mat-fab.mat-primary:hover, .mat-mini-fab.mat-primary:hover {
+            background-color: #325080
+        }
 
     .mat-flat-button.mat-accent, .mat-raised-button.mat-accent, .mat-fab.mat-accent, .mat-mini-fab.mat-accent {
         background-color: #fa062e
@@ -38537,6 +38540,7 @@ mat-icon {
     padding: 4px 8px;
     text-transform: capitalize;
     white-space: nowrap;
+    color: #222;
     vertical-align: middle
 }
 
@@ -39710,7 +39714,8 @@ tr.mat-row, tr.mat-footer-row {
 
 .rd-form-select-label {
     font-size: 11px;
-    letter-spacing: .8px
+    letter-spacing: .8px;
+    color: #363636;
 }
 
 .multi-dropdown-style, .single-dropdown-style {
@@ -40565,8 +40570,11 @@ input.mat-input-element:read-only {
     border: 1px solid #EFEFEF;
     font-size: 14px
 }
-.form-select{
-    box-shadow:unset;
+.form-select {
+    box-shadow: unset;
+    padding: 8px;
+    font-size: 13px;
+    color: #202020;
 }
 .form-select:focus {
     box-shadow: unset;
