--- a/EFC2.0/Pages/Organization/Org_Dashboard/Org_Summary.cshtml
+++ b/EFC2.0/Pages/Organization/Org_Dashboard/Org_Summary.cshtml
@@ -72,7 +72,7 @@
                                             </div>
                                             <div class="col-md-3 tabcolumn">
                                                 <div class="rd-form-select pe-1">
-                                                    <button class="btn btn-info">Sumbit</button>
+                                                    <button class="btn btn-info">Submit</button>
                                                 </div>
                                             </div>
                                         </form>
