--- a/EFC2.0/Pages/Organization/Org_Employees/Organization_Tree.cshtml
+++ b/EFC2.0/Pages/Organization/Org_Employees/Organization_Tree.cshtml
@@ -29,8 +29,7 @@
                                 <div class="row ng-star-inserted">
                                     <div class="col-md-12 text-end">
                                         <div class="d-flex flex-row justify-content-end align-items-center f-14 gap-2">
-                                            <label for="" class="ng-star-inserted">Expand</label>
-                                            <button mat-ripple="" type="button" ptooltip="Download" tooltipposition="top" class="mat-ripple p-element mat-menu-trigger rd-round-button"><img src="~/images/download.svg"></button>
+                                            <button type="button" ptooltip="Download" tooltipposition="top" class="mat-ripple p-element mat-menu-trigger rd-round-button"><img src="~/images/download.svg"></button>
                                         </div>
                                     </div>
                                 </div>
