--- a/EFC2.0/wwwroot/css/organization.css
+++ b/EFC2.0/wwwroot/css/organization.css
@@ -397,7 +397,7 @@ i {
     border-radius: 5px;
     height: 185px;
     display: block;
-    background: linear-gradient(45deg, #ffffff 0%, #00fff3 100%);
+    background: linear-gradient(45deg, #ffffff 0%, #fed0b5 100%);
     box-shadow: 0 4px 6px 0 #ddd;
 }
 
