--- a/EFC2.0/Pages/Organization/Org_Employees/Employee_View.cshtml
+++ b/EFC2.0/Pages/Organization/Org_Employees/Employee_View.cshtml
@@ -140,10 +140,10 @@
                                                     <div class="employee-mail ng-star-inserted">
                                                         <p class="mt-3 mb-0" style="margin-bottom: -10px;">EMP-20240425-001 </p>
                                                         <div class="mail-data">
-                                                            <p class="mb-0 ng-star-inserted">chhavi.yadav@databridgemarketresearch.in</p>
+                                                            <p id="emailText" class="mb-0 ng-star-inserted">chhavi.yadav@databridgemarketresearch.in</p>
                                                             <button tooltipevent="focus" tooltipposition="top" title="Copy Email" class="mat-focus-indicator p-element d-flex justify-content-center menuClick mat-icon-button mat-button-base ng-star-inserted" id="chhavi.yadav@databridgemarketresearch.in" fdprocessedid="yvygab">
                                                                 <span class="mat-button-wrapper">
-                                                                    <mat-icon role="img" color="primary" class="mat-icon notranslate font-size-16 pb-2 menuClick mat-primary material-icons" style="color: #0096FF;">content_copy</mat-icon>
+                                                                    <mat-icon role="img" color="primary" class="mat-icon notranslate font-size-16 pb-2 menuClick mat-primary material-icons" style="color: #0096FF;" onclick="copyEmailText()">content_copy</mat-icon>
                                                                 </span>
                                                                 <span matripple="" class="mat-ripple mat-button-ripple mat-button-ripple-round"></span><span class="mat-button-focus-overlay"></span>
                                                             </button>
