--- a/EFC2.0/wwwroot/css/organization.css
+++ b/EFC2.0/wwwroot/css/organization.css
@@ -12,9 +12,9 @@
         border-color: #325080;
         box-shadow: unset;
         font-size: 13px;
-        padding: 8px;
     }
-
+    .mat-card .rd-form-select .btn-info {
+    }
 ._mat-animation-noopable.mat-card {
     transition: none;
     animation: none
@@ -232,8 +232,9 @@
 
 
 
-th, td {
+.p-organizationchart-table th, .p-organizationchart-table td {
     white-space: nowrap !important;
+    text-align: center !important;
     padding: 5px !important
 }
 
@@ -601,25 +602,30 @@ button.menuClick {
     display: inline-block;
     position: relative;
 }
+
 .p-organizationchart-table {
     border-spacing: 0;
     border-collapse: separate;
     margin: 0 auto;
 }
+
 .p-organizationchart .p-organizationchart-node-content {
     width: 200px;
     padding: 0;
     border: none;
     background: #e9ecef;
 }
+
 .p-organizationchart .node-header {
     background-color: #fff;
 }
+
 .p-organizationchart .img-offset {
     position: relative;
     top: 14px;
     z-index: 1;
 }
+
 .p-organizationchart .card-tree {
     background-color: #f3f4f7;
     padding: 20px 16px;
@@ -628,17 +634,20 @@ button.menuClick {
     text-align: center;
     position: relative;
 }
+
 .p-organizationchart .name {
     font-weight: 600;
     font-size: 14px;
     color: #273143;
 }
+
 .p-organizationchart .position {
     font-size: 12px;
     font-weight: 500;
     color: #777;
     margin: 4px 0 6px;
 }
+
 .p-organizationchart .subordinates {
     display: flex;
     align-items: center;
@@ -946,74 +955,88 @@ button.menuClick {
         width: 100px
     }
 }
+
 .mat-tab-group .tabs {
     border-bottom: 1px solid #ddd;
 }
-.mat-tab-group .tabs .tab-button {
-    border: 0;
-    background: transparent;
-    font-size: 14px;
-    height: 45px;
-    padding: 0 24px;
-    cursor: pointer;
-    box-sizing: border-box;
-    opacity: .6;
-    text-align: center;
-    display: inline-flex;
-    justify-content: center;
-    align-items: center;
-    white-space: nowrap;
-    position: relative;
-}
-.mat-tab-group .tabs .tab-button.mat-tab-body-active {
-    border-bottom: 2px solid #325080;
-    opacity: 1;
-}
+
+    .mat-tab-group .tabs .tab-button {
+        border: 0;
+        background: transparent;
+        font-size: 14px;
+        height: 45px;
+        padding: 0 24px;
+        cursor: pointer;
+        box-sizing: border-box;
+        opacity: .6;
+        text-align: center;
+        display: inline-flex;
+        justify-content: center;
+        align-items: center;
+        white-space: nowrap;
+        position: relative;
+    }
+
+        .mat-tab-group .tabs .tab-button.mat-tab-body-active {
+            border-bottom: 2px solid #325080;
+            opacity: 1;
+        }
+
 .mat-tab-body-wrapper .mat-tab-body {
-    display:none;
+    display: none;
 }
-.mat-tab-body-wrapper .mat-tab-body.mat-tab-body-active {
-    display: block;
-}
+
+    .mat-tab-body-wrapper .mat-tab-body.mat-tab-body-active {
+        display: block;
+    }
 
 .orgReports {
     margin-bottom: 0;
 }
-.orgReports .accordion-item {
-    margin: 15px 0;
-    border: 1px solid #ddd;
-    border-radius: 6px;
-}
-.orgReports .accordion-button {
-    font-size: 13px;
-    font-weight: 600;
-    color: #444;
-    padding: 14px;
-    background-color: #e1e1e1;
-    box-shadow: unset;
-}
-.orgReports .accordion-button.collapsed {
-    background-color: #e1e1e1;
-    box-shadow: unset;
-}
-.orgReports .accordion-body {
-    padding: 14px;
-}
-.orgReports .accordion-body ol {
-    padding-left: 17px;
-}
-.orgReports .accordion-body ol li {
-    font-size: 14px;
-    margin-bottom: 15px;
-}
-.orgReports .accordion-body ol li a {
-    color: #335180;
-}
-.orgReports .accordion-body ol li a:hover {
-    color: #ff823e;
-}
-.orgReports .accordion-body ol li a .sub-title {
-    color: #646464;
-    font-size: 12px;
-    margin: 6px 0;
-}
+
+    .orgReports .accordion-item {
+        margin: 15px 0;
+        border: 1px solid #ddd;
+        border-radius: 6px;
+    }
+
+    .orgReports .accordion-button {
+        font-size: 13px;
+        font-weight: 600;
+        color: #444;
+        padding: 14px;
+        background-color: #e1e1e1;
+        box-shadow: unset;
+    }
+
+        .orgReports .accordion-button.collapsed {
+            background-color: #e1e1e1;
+            box-shadow: unset;
+        }
+
+    .orgReports .accordion-body {
+        padding: 14px;
+    }
+
+        .orgReports .accordion-body ol {
+            padding-left: 17px;
+        }
+
+            .orgReports .accordion-body ol li {
+                font-size: 14px;
+                margin-bottom: 15px;
+            }
+
+                .orgReports .accordion-body ol li a {
+                    color: #335180;
+                }
+
+                    .orgReports .accordion-body ol li a:hover {
+                        color: #ff823e;
+                    }
+
+                    .orgReports .accordion-body ol li a .sub-title {
+                        color: #646464;
+                        font-size: 12px;
+                        margin: 6px 0;
+                    }
