--- a/EFC2.0/wwwroot/css/style.css
+++ b/EFC2.0/wwwroot/css/style.css
@@ -4601,7 +4601,7 @@ progress {
 .form-control {
     display: block;
     width: 100%;
-    padding: 8px;
+    padding: 6px 8px;
     font-size: 13px;
     font-weight: 400;
     line-height: 1.5;
@@ -38970,7 +38970,7 @@ input::-webkit-outer-spin-button, input::-webkit-inner-spin-button {
 }
 
 .card-heading {
-    color: #273143
+    color: #325080
 }
 
 .mat-drawer-inner-container::-webkit-scrollbar {
@@ -40572,10 +40572,48 @@ input.mat-input-element:read-only {
 }
 .form-select {
     box-shadow: unset;
-    padding: 8px;
+    padding: 6px 8px;
     font-size: 13px;
     color: #202020;
 }
 .form-select:focus {
     box-shadow: unset;
+}
+
+
+/*Modal Popup*/
+.modal-dialog.efcModal {
+    max-width: 42% !important;
+}
+.modal-dialog.efcModal .modal-content {
+    display: block;
+    padding: 24px;
+    border-radius: 4px;
+    box-sizing: border-box;
+    overflow: auto;
+    outline: 0;
+    width: 100%;
+    height: 100%;
+    border: 0;
+}
+.modal-dialog.efcModal .modal-content .modal-footer {
+    padding: 0;
+    border: 0;
+}
+.modal-dialog.efcModal .modal-content .modal-footer button {
+    font-size: 14px;
+    border-radius: 4px;
+    box-shadow:unset;
+}
+.modal-dialog.efcModal .modal-content .modal-footer button.btn-primary {
+    background-color: #325080;
+}
+.modal-dialog.efcModal .modal-content .modal-footer button.btn-secondary {
+    background-color: transparent;
+    border: 1px solid red;
+    color: red;
+}
+.modal-dialog.efcModal .modal-content .modal-footer button.btn-secondary:hover {
+    background-color: red;
+    color: white;
 }
