--- a/EFC2.0/Pages/Shared/Header.cshtml
+++ b/EFC2.0/Pages/Shared/Header.cshtml
@@ -1,6 +1,6 @@
 ﻿<div class="navbar page-header navbar-light fixed-top rd-shadow-300" dir="ltr">
     <div class="top-nav-left">
-        <a routerlink="" class="logo" href="#/">
+        <a href="/dashboard" class="logo" href="#/">
             <span class="logo">
                 <img src="~/images/efclogo.png" alt="" class="p-1 my-logo rd-ms-1 rd-me-1 ng-star-inserted">
             </span>
@@ -40,10 +40,10 @@
                     <mat-icon role="img" class="mat-icon notranslate me-0 material-icons mat-icon-no-color" aria-hidden="true">person</mat-icon>
                     My Profile
                 </button>
-                <button id="logoutButton" class="mat-focus-indicator menu-butt mat-menu-item">
+                <a href="/index" id="logoutButton" class="mat-focus-indicator menu-butt mat-menu-item">
                     <mat-icon role="img" class="mat-icon notranslate me-0 material-icons mat-icon-no-color" aria-hidden="true">logout</mat-icon>
                     Log Out
-                </button>
+                </a>
             </div>
         </div>
     </div>
