--- a/EFC2.0/Pages/Organization/Org_Dashboard/Org_Reports.cshtml
+++ b/EFC2.0/Pages/Organization/Org_Dashboard/Org_Reports.cshtml
@@ -8,8 +8,8 @@
         <div class="aos-init aos-animate">
             <div class="child-content nav-active-top" id="summary">
                 <ul class="topnav-child-1">
-                    <li><a href="/organization/org_dashboard/org_summary">Summary</a></li>
-                    <li class="nav-active-top"><a href="/organization/org_dashboard/org_reports">Reports</a></li>
+                    <li><a href="/organization/org_dashboard/org_summary" data-target="summary">Summary</a></li>
+                    <li class="nav-active-top"><a href="/organization/org_dashboard/org_reports" data-target="summary">Reports</a></li>
                 </ul>
                 <div class="container-fluid p-3">
                     <div class="grand-child nav-active-top">
