--- a/EFC2.0/wwwroot/css/style.css
+++ b/EFC2.0/wwwroot/css/style.css
@@ -36920,7 +36920,7 @@ em, i {
 }
 
 .rd-text-secondary-1 {
-    color: #5991c9
+    color: #173d7a
 }
 
 .rd-bg-secondary-1 {
@@ -38970,7 +38970,7 @@ input::-webkit-outer-spin-button, input::-webkit-inner-spin-button {
 }
 
 .card-heading {
-    color: #325080
+    color: #173d7a
 }
 
 .mat-drawer-inner-container::-webkit-scrollbar {
