--- a/EFC2.0/wwwroot/css/headerfooter.css
+++ b/EFC2.0/wwwroot/css/headerfooter.css
@@ -209,7 +209,7 @@
 .nav-item p {
     margin: 0;
     font-size: 11px;
-    color: #325080;
+    color: #173d7a;
     font-weight: 500;
     transition: all .3s linear;
 }
@@ -219,7 +219,7 @@
 
 .nav-item a {
     text-decoration: none;
-    color: #325080 !important
+    color: #173d7a !important
 }
 
     .nav-item a:hover {
