--- a/EFC2.0/wwwroot/css/tabs.css
+++ b/EFC2.0/wwwroot/css/tabs.css
@@ -44,14 +44,14 @@
         font-size: 11px;
         cursor: pointer;
         font-weight: 500;
-        color: #8b8b8b;
+        color: #5a5959;
         text-decoration: none;
         text-transform: uppercase
     }
         .topnav li a {
-            display:block;
+            display: block;
             padding: 12px;
-            color: #8b8b8b;
+            color: #5a5959;
         }
 
         .topnav li a:hover {
@@ -93,7 +93,7 @@
         font-size: 11px;
         cursor: pointer;
         font-weight: 400;
-        color: #8b8b8b;
+        color: #5a5959;
         text-decoration: none;
         text-transform: capitalize;
         letter-spacing: .7px
@@ -101,10 +101,12 @@
     .topnav-child-1 li a {
         display:block;
         padding: 12px;
-        color: #8b8b8b;
+        color: #5a5959;
         position:relative;
     }
-
+    .topnav-child-1 li.nav-active-top a {
+    color: #173d7a;
+}
         .topnav-child-1 li a:hover {
             color: #222
         }
